add search product by categories
